--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,15 @@
 * {
     font-family: Helvetica, sans-serif;
+    background-color: lightsteelblue;
+    color:black;
+    }
+
+.fimg {
+    width: 400px;
+    height: auto;
+}
+
+#main-img {
+    width: 600px;
+    height: auto;
 }
